# wts

./: Cargo.toml  LICENSE  README.md  justfile  wts.bash  wts.fish  wts.zsh
completions/: wts.bash  wts.fish  wts.zsh
demo/: claude-action.fish  demo.cast  driver.fish
src/: main.rs
tests/: cli.rs
