[package]
name = "wts"
version = "0.1.0"
edition = "2021"
description = "Create a jj workspace in a sibling <repo>-wts/ folder and cd into it"

[[bin]]
name = "wts"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
