[package]
name = "wts"
version = "0.1.1"
edition = "2021"
description = "Create a jujutsu workspace and set it up"
license = "MIT"
repository = "https://github.com/AaDalal/wts"
homepage = "https://github.com/AaDalal/wts"
readme = "README.md"
keywords = ["jujutsu", "jj", "workspace", "worktree", "fish"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["demo/demo.cast"]

[[bin]]
name = "wts"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
glob = "0.3"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
